feat(platform/rendering): Modernize Mod rendering Vulkan/OpenGL
- Bump Fabric API to 0.157.0 (26.2)
- Use Fabric API rendering for custom FeatureRenderer
- Rewrite all renderer with Minecraft FeatureRenderer
- Rename all renderer with new Fabric Registry API usages
- Fully compatible between Vulkan/OpenGL
- Prepare API to switch Submit backend